--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2572,8 +2572,9 @@ input, select, textarea {
 		-webkit-flex-wrap: wrap;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		postiion: relative;
+		position: relative;
 		margin: -2.5em 0 0 -2.5em;
+		
 	}
 
 		.tiles article {
@@ -3319,6 +3320,10 @@ margin-top:4rem ;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+.tiles h2{
+	color: yellowgreen;
+
 }
 /* Wrapper */
 
