--- a/assets/css/spec.css
+++ b/assets/css/spec.css
@@ -1,6 +1,7 @@
 .main img{
 
-height: 500px;
-width: 200px;
-
+height: 400px;
+width: 120px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+object-fit: contain
 }
